samples/_failures_safe/1761082927_f0c81b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7278da86.c: In function ‘main’:
./samples/SAFE/__tmp_7278da86.c:187:16: error: expected declaration or statement at end of input
  187 |                state_names[current_state], state_names[new_state]);
      |                ^~~~~~~~~~~
./samples/SAFE/__tmp_7278da86.c:187:16: error: expected declaration or statement at end of input
